# diaryArchive

./: .env.example  .gitignore  Makefile  README.md  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.development  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  comments.py  diaries.py  discover.py  health.py  me_.py  (+5 more)
backend/app/core/: config.py  database.py  error_handlers.py  exceptions.py  indexes.py  middleware.py  sanitize.py  security.py  utils.py
backend/app/models/: comment.py  diary.py  notification.py  social.py  token.py  user.py
backend/app/repositories/: base.py  bookmark_repo.py  comment_repo.py  diary_repo.py  follow_repo.py  like_repo.py  notification_repo.py  password_reset_token_repo.py  refresh_token_repo.py  user_repo.py
backend/app/schemas/: __init__.py  audit_log.py  bookmark.py  comment.py  diary.py  follow.py  like.py  media.py  notification.py  password_reset_token.py  refresh_token.py  report.py  user.py
backend/app/search/: config.py  enricher.py  indexer.py  sync.py
backend/app/services/: comment_service.py  diary_service.py  encryption_service.py  enrichment_service.py  notification_service.py  search_service.py  social_service.py  tag_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py  test_diaries.py  test_notifications.py  test_search.py  test_social.py  test_users.py
backend/tests/test_repositories/: test_user_repo.py
(+143 files in other folders)
